--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "watch": "tsc -w",
     "dev": "nodemon dist/index.js",
     "start": "node dist/index.js",
-    "start2": "ts-node src/index.ts"
+    "start2": "ts-node src/index.ts",
+    "create:migration": "mikro-orm migration:create"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
@@ -23,8 +25,14 @@
     "@mikro-orm/core": "^5.6.8",
     "@mikro-orm/migrations": "^5.6.8",
     "@mikro-orm/postgresql": "^5.6.8",
+    "apollo-server-express": "^3.11.1",
+    "argon2": "^0.30.3",
     "dotenv": "^16.0.3",
-    "pg": "^8.9.0"
+    "express": "^4.18.2",
+    "graphql": "^15.3.0",
+    "pg": "^8.9.0",
+    "reflect-metadata": "^0.1.13",
+    "type-graphql": "^1.1.1"
   },
   "mikro-orm": {
     "useTsNode": true,
