--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
     "nodemon": "^2.0.20",
@@ -27,6 +28,7 @@
     "@mikro-orm/postgresql": "^5.6.8",
     "apollo-server-express": "^3.11.1",
     "argon2": "^0.30.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "graphql": "^15.3.0",
