--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.16",
+    "@types/ioredis": "^5.0.0",
     "@types/node": "^18.11.18",
+    "@types/nodemailer": "^6.4.7",
+    "@types/uuid": "^9.0.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
@@ -32,9 +35,12 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "graphql": "^15.3.0",
+    "ioredis": "^5.3.0",
+    "nodemailer": "^6.9.1",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "uuid": "^9.0.0"
   },
   "mikro-orm": {
     "useTsNode": true,
